# BrickGPT

./: .gitignore  README.md  apple.ldr  apple.txt  changes.md  pyproject.toml  table.ldr  table.txt
objaverse/: README.md  comparison_metrics.html  comparison_metrics.md  download_obj.py  generate_gallery.py  mesh2brick_objaverse.py  render_objaverse.py  update_metrics.py
scripts/: download_obj.py
